[package]
name = "rs64-rom"
version = "0.1.0"
authors = ["monocasa <tristan.hastings.miller@gmail.com>"]
edition = "2018"
description = "Library for manipulating Nintendo 64 ROM images"
license = "GPL-3.0-or-later"
repository = "https://github.com/monocasa/rs64-rom"
homepage = "https://github.com/monocasa/rs64-rom"

[dependencies]
byteorder = "1"
